--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -6,17 +6,20 @@ body {
 
   legend {
     color: white;
+    text-align: left;
+    font-weight: 500;
+    font-size: 16px;
   }
 
   .form-input {
     background: transparent;
     box-shadow: 0 none;
     border: 0 none;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid transparent;
     color: white;
     border-radius: 0;
     transition: all .3s easy-in-out;
-    font-size: 52px;
+    font-size: 42px;
 
     &:focus,
     &:active {
@@ -28,17 +31,17 @@ body {
 }
 
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
 
 .weather-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   height: 100vh;
+  width: 330px;
+  margin: 0 auto;
+  padding: 10% 0;
 
   .temperature {
     margin-top: 10px;
