--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -37,12 +37,19 @@ h1, h2, h3, h4, h5, h6 {
 
 .weather-container {
   transition: background .4s ease-in-out;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 
   .weather-body {
     text-align: center;
     width: 330px;
     margin: 0 auto;
-    padding: 10% 0;
+    padding: 50px 0;
 
     .temperature {
       margin-top: 10px;
