--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -43,6 +43,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   margin: 0;
   padding: 0;
 
@@ -76,5 +77,15 @@ h1, h2, h3, h4, h5, h6 {
     h3 {
       font-size: 20px;
     }
+  }
+
+  .blockquote {
+    background: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    margin: 0;
   }
 }
