functional programming is use

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -59,9 +59,6 @@ body {
   }
 }
 
-$font-size = 132px;
-$small-font-size = 24;
-
 .weather-item {
   height: 100%;
   text-align: center;
@@ -98,7 +95,7 @@ $small-font-size = 24;
 
   .temperature {
     font-weight: 100;
-    font-size: $font-size;
+    font-size: 132px;
     line-height: 1em;
     margin: 0;
   }
